Added verification for adding blogposts to DB

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <title>{{title}}</title>
+                <style>
+            .error {
+                color: red
+            }
+            </style>
+    </head>
     </html>
     <body>
         {% block content %}
         {% endblock %}
     </body>
-    <a href='/blog'>Read Blog</a> or <a href-='/newpost'>New Post</a>
+    <a href='/blog'>Read Blog Entries</a> or <a href='/newpost'>Create a New Post</a>
     <html>
