--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,31 @@
 <html>
     <head>
         <title>{{title}}</title>
-                <style>
+            <style>
             .error {
-                color: red
+                color: blue;
             }
             </style>
     </head>
     </html>
+    <div>
     <body>
-        {% block content %}
+        {% block content%}
         {% endblock %}
+
+        <ul>
+        {% with messages = get_flashed_messages(with_categories=True) %}
+            {% for category,message in messages %}
+               <li class="{{category}}">{{message}}</li>
+            {% endfor %}
+        {% endwith %}
+        </ul>
+       
     </body>
+
+    </div>
+
     <a href='/blog'>Read Blog Entries</a> or <a href='/newpost'>Create a New Post</a>
     <html>
+
+    
